SFDC Automation/src/objects/Survey_Exclusion__c.object
<CustomObject>
    <description>Provides an easy-to-use mechanism for the Marketing group to exclude specific accounts with key criteria and to change the active vehicle criteria for different survey types.</description>
    <fields>
        <fullName>Exclusion_Field__c</fullName>
        <description>Field used to exclude or include criteria from the list of survey candidates.</description>
        <inlineHelpText>Choose the criteria that should be excluded when determining the list of survey candidates.  Please remember each exclusion type will be used to remove any customers that meet this criteria from being surveyed.</inlineHelpText>
        <label>Exclusion Field</label>
        <picklist>
            <picklistValues>
                <fullName>Account Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Lessee No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Risk Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Top 10 Ranking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Term Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exclusion_Operator__c</fullName>
        <description>Operator used to determine how the exclusion should be evaluated.</description>
        <inlineHelpText>Please choose the operator that best describes how the exclusion should be evaluated.</inlineHelpText>
        <label>Exclusion Operator</label>
        <picklist>
            <controllingField>Exclusion_Field__c</controllingField>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than or equal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exclusion_Value__c</fullName>
        <description>Value used for the exclusion criteria.</description>
        <inlineHelpText>Please type the value (case-sensitive) desired to exclude based on the exclusion field.  (i.e. Exclusion Field = Account State, Exclusion Operator = equals, Exclusion Value = HI)</inlineHelpText>
        <label>Exclusion Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Assignment__c</fullName>
        <description>Survey exclusion can only apply to one survey type and one assignment group.</description>
        <inlineHelpText>Survey exclusions only apply to one survey type and one assignment group.</inlineHelpText>
        <label>Survey Assignment</label>
        <referenceTo>Survey_Assignment__c</referenceTo>
        <relationshipLabel>Survey Exclusions</relationshipLabel>
        <relationshipName>Survey_Exclusions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Exclusion</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Survey Exclusion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Exclusions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>